# murmurat

./: .gitignore  Cargo.toml  README.md  flake.nix  murmurat.lua
murmurat-cli/: Cargo.toml
murmurat-cli/src/: client.rs  main.rs  server.rs
murmurat-core/: Cargo.toml
murmurat-core/src/: attack.rs  coding.rs  encryption.rs  lib.rs  message.rs  protocol.rs
murmurat-exploit/: Cargo.toml
murmurat-exploit/src/: main.rs  nonce.rs
murmurat-mitm/: Cargo.toml
murmurat-mitm/src/: main.rs
murmurat-relay/: Cargo.toml
murmurat-relay/src/: main.rs
murmurat-session/: Cargo.toml
murmurat-session/src/: main.rs
src/: encryption.rs  main.rs  message.rs  protocol.rs
