[package]
name = "murmurat-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
pcap-parser = { version = "0.16.0", features = ["data"] }
chrono = "0.4"
murmurat-core = { path = "../murmurat-core" }
tokio = { version = "1.45.0", features = ["full", "net", "process", "sync"] }
bytes = "1.10.1"

num-bigint = "0.4.6"
config = "0.15.11"
clap = { version = "4.5.38", features = ["derive"] }
socket2 = "0.5.9"
